plugins {
	id 'java'
	id 'com.github.johnrengelman.shadow' version '8.1.1'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.vaadin' version '24.6.0'
}

group = 'ru.sushi.delivery'
version = '0.0.1-SNAPSHOT'

jar {
	manifest {
		attributes(
				'Main-Class': 'ru.sushi.delivery.kds.KdsApplication' // Замените на путь к вашему Main классу
		)
	}
}

vaadin {
	productionMode = true
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('vaadinVersion', "24.6.0")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework:spring-websocket'
	implementation 'org.springframework:spring-messaging'
	implementation 'com.vaadin:vaadin-spring-boot-starter'
	implementation 'org.hibernate.orm:hibernate-core:6.2.7.Final'
	implementation 'org.hibernate.orm:hibernate-envers'
	implementation 'org.liquibase:liquibase-core'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'

	annotationProcessor 'org.projectlombok:lombok'
}

dependencyManagement {
	imports {
		mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
